--- a/cmake/stm32cubemx/CMakeLists.txt
+++ b/cmake/stm32cubemx/CMakeLists.txt
@@ -39,6 +39,10 @@ set(MX_Application_Src
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/sysmem.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/syscalls.c
     ${CMAKE_CURRENT_SOURCE_DIR}/../../startup_stm32g491xx.s
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/can_bus.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/telemetry_thread.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/telemetry.c 
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../Core/Src/telemetry_hooks.c 
 )
 
 # STM32 HAL/LL Drivers
@@ -363,7 +367,9 @@ set(MX_LINK_DIRS
 set(MX_LINK_LIBS 
     STM32_Drivers
     ${TOOLCHAIN_LINK_LIBRARIES}
-    USBX	ThreadX	
+    USBX
+	ThreadX
+	
 )
 # Interface library for includes and symbols
 add_library(stm32cubemx INTERFACE)
